--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -6,7 +6,11 @@ parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
 serialize = 
 	{major}.{minor}.{patch}-{release}
 	{major}.{minor}.{patch}
-message = bump version: {new_version}
+message = bump version to {new_version}
+
+[bumpverision:file:doc/config.py]
+
+[bumpversion:file:doc/bugs.md]
 
 [bumpversion:file:include/version.h]
 parse = (?P<major>\d+)\,(?P<minor>\d+)\,(?P<patch>\d+)
