travis: use trusty & install boost

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
+sudo: required
+dist: trusty
+
 language: cpp
+compiler:
+  - gcc
+
+addons:
+  apt:
+    packages:
+      - libboost-all-dev
+
 script: make && make test
 
