--- a/.travis.yml
+++ b/.travis.yml
@@ -7,22 +7,32 @@ compiler:
 
 cache:
   apt: true
-  brew: true
   directories:
     - $HOME/.cache
 
 env:
   global:
-    - BOOST_ROOT = $HOME/.cache/boost_1_61_0
+    - BOOST_BUILD_PATH: $HOME/.cache/boost_build
+    - BOOST_ROOT: $HOME/.cache/boost_1_61_0
 
 before_install:
+  # download boost
   - cd $HOME/.cache
   - wget https://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.tar.gz
   - tar xfz boost_1_61_0.tar.gz
-  - export CPLUS_INCLUDE_PATH=$BOOST_ROOT:$CPLUS_INCLUDE_PATH
   - cd -
 
-install: make
+  # install Boost.Build
+  - cd $BOOST_ROOT/tools/build
+  - ./bootstrap.sh
+  - ./b2 install --prefix=$BOOST_BUILD_PATH --cxxflaags="-std=c++11"
+  - export PATH=$PATH:$BOOST_BUILD_PATH/bin
+  - "echo \"project user-config ;\nuse-project boost : $BOOST_BUILD_PATH ;\n\" > $HOME/user-config.jam"
+  - cd -
 
-script: make test
+install:
+  - b2
+
+script:
+  - b2 test
 
